k8s/frontend.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: auth-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: bostang/auth-app-frontend:latest # Ganti dengan image Docker Hub Anda
          ports:
            - containerPort: 80 # Default port untuk React App setelah di-build (Nginx/serve)
---
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: auth-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
   # ClusterIP membuat service ini hanya dapat diakses dari dalam cluster
    # Jika Anda ingin mengaksesnya dari luar cluster, gunakan type: LoadBalancer atau NodePort
    # Namun, untuk keamanan, kita gunakan ClusterIP saja.
